apps/smart-home/unifi-controller/service-tcp.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: controller-tcp
  namespace: unifi
  annotations:
    metallb.universe.tf/allow-shared-ip: 192.168.1.210
spec:
  selector:
    app: unifi-controller
  type: LoadBalancer
  loadBalancerIP: 192.168.1.210
  ports:
    - targetPort: 8080
      port: 8080
      protocol: "TCP"
      name: inform
    - targetPort: 8081
      port: 8081
      protocol: "TCP"
      name: unifi-8081
    - targetPort: 8843
      port: 8843
      protocol: "TCP"
      name: unifi-8843
    - targetPort: 8880
      port: 8880
      protocol: "TCP"
      name: unifi-8880
    - targetPort: 6789
      port: 6789
      protocol: "TCP"
      name: unifi-6789
