apps/smart-home/unifi-controller/service-ui.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: controller-ui
  namespace: unifi
spec:
  selector:
    name: controller
  type: NodePort
  ports:
    - targetPort: https
      port: 443
      name: https
    - targetPort: metrics
      port: 9130
      name: metrics
