apps/smart-home/unifi-controller/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unifi-controller
  namespace: unifi
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    kubernetes.io/ingress.class: internal
    haproxy.org/server-ssl: "true"
    haproxy.org/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - unifi.private.channings.me
      secretName: unifi-controller-tls
  rules:
    - host: unifi.private.channings.me
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: controller
                port:
                  name: https
